Se agrego un login con google

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,19 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <!-- Google maps Script-->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDmsxmJkYoFSfyr19MA72G8cJqiKrYUQ1k" async defer> </script>
+
+
+  <!--Add google auth-->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+
 </head>
 
 <body>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0" nonce="12c9bGfW"></script>
+
+  
   <app-root></app-root>
 </body>
 
